fix spacing issue in upload preview modal

--- a/src/app/upload-modal/upload-modal.component.css
+++ b/src/app/upload-modal/upload-modal.component.css
@@ -684,7 +684,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 } */
 
 .fix-scroll{
-  max-height: 24vh;
+  max-height: 26vh;
   overflow: hidden;
   overflow-y: scroll;
 }
